# wifidog-gateway

./: .cproject  .cvsignore  .gitignore  .project  .travis.yml  .travis_configure_wrapper.sh  AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  NEWS  README  README.md  README.openwrt  autogen.sh  configure.in  wifidog-msg.html.in  wifidog.conf  wifidog.spec.in
.github/workflows/: codeql-buildscript.sh
contrib/airos/wifidog/: Makefile  files.patch
contrib/airos/wifidog/files/: wifidog.conf  wifidog.init
contrib/airos/wifidog/patches/: 100-counter_outoing.patch
contrib/build-openwrt-common-1.0.0/wifidog/files/: wifidog.conf  wifidog.init
contrib/build-openwrt-global/wifidog/: Makefile
contrib/build-openwrt-global/wifidog/files/: wifidog.init.procd  wifidog.uci.config
contrib/build-openwrt-ipk/wifidog/: Makefile
contrib/build-openwrt-ipk/wifidog/files/: wifidog.conf
contrib/build-openwrt-kamikazeipk/wifidog/: Makefile
contrib/build-openwrt-kamikazeipk/wifidog/files/: wifidog.conf  wifidog.init
contrib/build-openwrt-kamikazeipk8.09up/wifidog/: Makefile
contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/: wifidog.conf
contrib/build-openwrt-whiterussianipk/wifidog/: Makefile
contrib/build-openwrt-whiterussianipk/wifidog/files/: wifidog.conf
contrib/load-tester/: README.md  common.py  fire_requests.py  fire_wdctl.py  generate_interfaces.sh  memory.gnuplot  mock_auth.py  plot_memory.sh  run.sh  wdctl.sh  wifidog-mock.conf
contrib/wifidog/: Makefile
contrib/wifidog/files/: wifidog.conf  wifidog.init
debian/: changelog  control  rules
doc/: .cvsignore  LICENSE.txt  Makefile.am  README.developers.txt  doxygen.cfg.in
ipkg/: rules  rules-rc4  rules-rc4-sdk  wifidog.conf
libhttpd/: .cvsignore  Makefile.am  api.c  httpd.h  httpd_priv.h  ip_acl.c  protocol.c  version.c
scripts/: Copy of white_black_flush.sh  Copy of white_black_flush.sh~  DOG_monitor.sh  DOG_monitor.sh~  GET_clients_rate.sh~  GET_settings  GET_settings.sh  GET_settings.sh~  GET_settings~  TEST_ServerIsAlive.sh~  auth.sh  authServerIsAlive.sh  authServerIsAlive.sh~  dog_conf_generator.sh  dog_conf_generator.sh~  white_black_flush.sh  white_black_flush.sh~  wifidog  wifidog.init
scripts/conf/: dog_alive  dog_post_conf  wifidog_conf
scripts/etc/: devicekey
scripts/init.d/: wifidog
src/: .cvsignore  Makefile  Makefile.am  auth.c  auth.h  bw_shaping.c  bw_shaping.h  capabilities.c  capabilities.h  centralserver.c  centralserver.c~  centralserver.h  cgi.c  cgi.h  child.c  child.h  client_list.c  client_list.h  commandline.c  commandline.h  common.h  conf.c  conf.h  debug.c  debug.h  device_key.c  device_key.h  extend_util.c  extend_util.h  firewall.c  firewall.h  fw.access  fw.counters  fw.destroy  fw.init  fw_iptables.c  fw_iptables.h  gateway.c  gateway.h  get_clientinfo.c  (+34 more)
